--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,25 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"bayani-79675","appId":"1:676023959863:android:627bc8cb58cf184dbb5ab2","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"bayani-79675","configurations":{"android":"1:676023959863:android:627bc8cb58cf184dbb5ab2","ios":"1:676023959863:ios:d0ecd1c61fe29630bb5ab2","macos":"1:676023959863:ios:d0ecd1c61fe29630bb5ab2","web":"1:676023959863:web:64c1dd6056a3c9f4bb5ab2","windows":"1:676023959863:web:5f3c4c4793bb9143bb5ab2"}}}}}}
+{
+    "flutter": {
+        "platforms": {
+            "android": {
+                "default": {
+                    "projectId": "bayani-79675",
+                    "appId": "1:676023959863:android:627bc8cb58cf184dbb5ab2",
+                    "fileOutput": "android/app/google-services.json"
+                }
+            },
+            "dart": {
+                "lib/firebase_options.dart": {
+                    "projectId": "bayani-79675",
+                    "configurations": {
+                        "android": "1:676023959863:android:627bc8cb58cf184dbb5ab2",
+                        "ios": "1:676023959863:ios:d0ecd1c61fe29630bb5ab2",
+                        "macos": "1:676023959863:ios:d0ecd1c61fe29630bb5ab2",
+                        "web": "1:676023959863:web:64c1dd6056a3c9f4bb5ab2",
+                        "windows": "1:676023959863:web:5f3c4c4793bb9143bb5ab2"
+                    }
+                }
+            }
+        }
+    }
+}
