--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,35 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  #firebase_auth: ^5.0.0
-  #firebase_core: ^3.0.0
-  cupertino_icons: ^1.0.2
-  #google_sign_in: ^6.2.1
   flutter:
     sdk: flutter
-  flutter_localization: ^0.2.0
-  internet_connection_checker_plus: ^2.3.0
-  google_maps_flutter: ^2.6.1
- 
-  #intl: ^0.18.1
-  http: ^1.2.1
-  geolocator: ^12.0.0
-  geocoding: ^3.0.0
-  lottie: ^3.1.2
-  aligned_tooltip: ^0.0.1
-  auto_size_text: ^3.0.0
-  badges: ^2.0.2
-  cached_network_image: ^3.3.1
-  carousel_slider: ^4.2.1
+
   cloud_firestore: ^4.15.7
   cloud_firestore_platform_interface: ^6.1.8
   cloud_firestore_web: ^3.10.7
-  collection: ^1.18.0
-  dash_chat: 
-    git:
-      url: https://github.com/FlutterFlow/flutterflow_dash_chat.git
-
-  dropdown_button2: ^2.3.9
   file_picker: ^6.1.1
   firebase_auth: ^4.17.7
   firebase_auth_platform_interface: ^7.1.7
@@ -67,56 +44,20 @@ dependencies:
   firebase_performance: ^0.9.3+16
   firebase_performance_platform_interface: ^0.1.4+24
   firebase_performance_web: ^0.1.4+24
-  fl_chart: ^0.55.0
-  flip_card: ^0.7.0
-  flutter_animate: ^4.1.1+1
-  flutter_cache_manager: ^3.3.1
-  flutter_plugin_android_lifecycle: ^2.0.17
-  font_awesome_flutter: ^10.6.0
-  google_fonts: ^6.1.0
   google_sign_in: ^6.1.5
   google_sign_in_android: ^6.1.20
   google_sign_in_platform_interface: ^2.4.2
   google_sign_in_web: ^0.12.1
-  image_picker: ^1.0.4
-  image_picker_android: ^0.8.8
-  image_picker_for_web: ^3.0.1
-  image_picker_platform_interface: ^2.9.1
-  infinite_scroll_pagination: ^4.0.0
-  intl: ^0.18.1
-  json_path: ^0.6.2
-  mime_type: ^1.0.0
-  page_transition: ^2.1.0
-  path_provider: ^2.0.14
-  path_provider_android: ^2.0.25
-  path_provider_foundation: ^2.2.2
-  path_provider_platform_interface: ^2.0.6
-  photo_view: ^0.14.0
-  plugin_platform_interface: ^2.1.8
-  provider: ^6.1.2
   shared_preferences: ^2.2.3
-  shared_preferences_android: ^2.2.1
-  shared_preferences_foundation: ^2.3.4
-  shared_preferences_platform_interface: ^2.3.1
-  shared_preferences_web: ^2.2.1
-  smooth_page_indicator: ^1.1.0
-  stream_transform: ^2.1.0
-  text_search: ^1.0.1
-  video_player: ^2.8.1
-  video_player_android: ^2.4.10
-  video_player_avfoundation: ^2.5.1
-  video_player_platform_interface: ^6.2.1
-  video_player_web: ^2.1.2
-  random_string: ^2.3.1
-  fluttertoast: ^8.2.6
-  dio: ^5.4.3+1
+  fluttertoast: ^8.2.8
+  auto_size_text: ^3.0.0
   firebase_storage: ^11.7.7
-  equatable: ^2.0.5
-  input_quantity: ^2.3.4
-  latlong2: ^0.9.1
-  flutter_map: ^7.0.2
-  flutter_dotenv: ^5.1.0
-  dependency_validator: ^4.1.0
+  google_maps_flutter: ^2.6.1
+  intl: ^0.19.0
+  geolocator: ^12.0.0
+  smooth_page_indicator: ^1.2.0+3
+  geocoding: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -142,6 +83,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - lib/images/
+    - lib/images/LOGODESC.png
+    - lib/images/placeholder_image.png
+    - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
