For app name logo

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,7 +30,13 @@ android {
     namespace "com.example.responder"
     compileSdk 34 //changed from flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
-
+    
+    // buildTypes { //For shringking apk size
+    //     release {
+    //         minifyEnabled false
+    //         proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    //     }
+    // }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
