--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,11 @@ dev_dependencies:
   flutter_launcher_icons: 0.13.1
   image: 4.0.17
   lints: 3.0.0
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/ICONLAUNCHER.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -87,6 +92,11 @@ flutter:
     - lib/images/
     - lib/images/LOGODESC.png
     - lib/images/placeholder_image.png
+    - assets/images/LOGOAPP.png
+    - assets/images/placeholder_image.png
+    - assets/images/LOGOAPP.png
+    - assets/images/LOGODESC.png
+    - assets/images/ICONLAUNCHER.png
     - .env
 
   # To add assets to your application, add an assets section, like this:
