--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,11 @@ dependencies:
   geolocator: ^12.0.0
   smooth_page_indicator: ^1.2.0+3
   geocoding: ^3.0.0
+  permission_handler: ^11.3.1
+  flutter_foreground_task: ^8.10.4
+  firebase_messaging: ^14.9.4
+  flutter_local_notifications: ^17.2.3
+  location: ^6.0.2
 
 
 dev_dependencies:
