--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   auto_size_text: ^3.0.0
   firebase_storage: ^11.7.7
   google_maps_flutter: ^2.6.1
-  intl: ^0.19.0
+  # intl: ^0.19.0
   geolocator: ^12.0.0
   smooth_page_indicator: ^1.2.0+3
   geocoding: ^3.0.0
@@ -72,7 +72,8 @@ dependencies:
   share_plus: ^10.0.0
   url_launcher: ^6.3.1
   video_player: ^2.8.1
-  
+  flutter_localization: ^0.2.0
+  confetti: ^0.8.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -108,7 +109,28 @@ flutter:
     - assets/images/LOGOAPP.png
     - assets/images/LOGODESC.png
     - assets/images/ICONLAUNCHER.png
-    
+    - assets/images/AboutApp/AppLogo.png
+    - assets/images/AboutCDRRMO/CDRRMOLogo.png
+    - assets/images/CPR/CPR(CardiopulmonaryResuscitation).png
+    - assets/images/FireSafetyTips/CreateanEscapePlan.png
+    - assets/images/FireSafetyTips/InstallSmoke Alarms.png
+    - assets/images/FirstAidTips/Bleeding.png
+    - assets/images/FirstAidTips/burns.png
+    - assets/images/FirstAidTips/Choking.png
+    - assets/images/FirstAidTips/CPR(CardiopulmonaryResuscitation).png
+    - assets/images/FirstAidTips/Poisoning.png
+    - assets/images/MentalHealth/MentalHealthAwareness.png
+    - assets/images/MentalHealth/Self-CareTipsforMentalHealth.png
+    - assets/images/MoreGuides/EmergencyPreparedness.png
+    - assets/images/MoreGuides/LifeSafety.png
+    - assets/images/MoreGuides/NaturalDisaster.png
+    - assets/images/MoreGuides/SocialDisaster.png
+    - assets/images/PersonalSafety/PersonalSafetyTips.png
+    - assets/images/30.png
+    - assets/images/31.png
+    - assets/images/32.png
+    - assets/images/LOGOAPP0.png
+    - assets/sounds/emergencynotifsound.mp3
 
   # To add assets to your application, add an assets section, like this:
   # assets:
